syntax = "proto3";
package pb;
option go_package = "./pb;pb";

message Booking {
  string no = 1;
  string last_pick_at = 2;
}
